# matching-core

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md
crates/matching-bench/: Cargo.toml
crates/matching-bench/benches/: matching_bench.rs
crates/matching-core/: Cargo.toml
crates/matching-core/src/: bounded_handoff.rs  command_ingress.rs  confirmed_input_consumer.rs  engine.rs  evidence_boundary.rs  governance_control_boundary.rs  input_queue.rs  journal.rs  journal_adapter.rs  lib.rs  matching_engine.rs  matching_runtime.rs  matching_runtime_driver.rs  messaging_reliability_boundary.rs  order.rs  order_book.rs  output_commit_boundary.rs  output_commit_loop.rs  output_committer.rs  output_queue.rs  per_symbol_execution_loop.rs  replay.rs  replay_runner.rs  runtime_config.rs  runtime_host.rs  runtime_host_driver.rs  runtime_loop.rs  runtime_manager.rs  runtime_shard_runner.rs  runtime_topology.rs  shard_execution_core.rs  shard_runtime.rs  shard_runtime_set.rs  snapshot.rs  snapshot_restore.rs  snapshot_store.rs  symbol_router.rs  symbol_routing.rs  symbol_runtime.rs  (+1 more)
crates/matching-service/: Cargo.toml  build.rs
crates/matching-service/src/: main.rs
crates/matching-service/src/grpc/: admin_server.rs  mod.rs
crates/matching-service/src/runtime/: mod.rs  symbol_runtime.rs
docs/: matching-service-reference  progress.html  roadmap.md
docs/architecture/: README.md  README.zh-CN.md  journal-model.md  journal-model.zh-CN.md  matching-engine.md  matching-engine.zh-CN.md  runtime-model.md  runtime-model.zh-CN.md
proto/matching/: admin.proto
(+59 files in other folders)
