[package]
name = "matching-service"
version = "0.1.0"
edition = "2021"

[dependencies]
matching-core = { path = "../matching-core" }
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11"
